[gd_scene load_steps=9 format=3 uid="uid://ddxtl6kpdjh2m"]

[ext_resource type="Script" path="res://objects/sound_controller.gd" id="1_bgbxt"]
[ext_resource type="AudioStream" uid="uid://dmukiwpe57c8l" path="res://sounds/capture_sound.wav" id="2_l4tsh"]
[ext_resource type="AudioStream" uid="uid://cqx6ffloxoaws" path="res://sounds/summon_balloon2.wav" id="3_8vbgq"]
[ext_resource type="AudioStream" uid="uid://sa28r5xxv8oa" path="res://sounds/summon_shadow.wav" id="4_rnvb8"]
[ext_resource type="AudioStream" uid="uid://bv4b5txcqmr5d" path="res://sounds/retrack_shadow.wav" id="5_40pxl"]
[ext_resource type="AudioStream" uid="uid://dkcxvwijgfx" path="res://sounds/win_sound.wav" id="6_md17t"]
[ext_resource type="AudioStream" uid="uid://dun0eodk1guol" path="res://sounds/background.wav" id="7_ux8g0"]
[ext_resource type="AudioStream" uid="uid://bcad1teqw6660" path="res://sounds/select_ability.wav" id="8_bj2fl"]

[node name="sound_controller" type="Node2D" node_paths=PackedStringArray("background_music")]
script = ExtResource("1_bgbxt")
background_music = NodePath("background")

[node name="capture_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_l4tsh")

[node name="summon_balloon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8vbgq")
volume_db = 7.492

[node name="summon_shadow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rnvb8")
volume_db = 4.651

[node name="retract_shadows" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_40pxl")

[node name="win_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_md17t")

[node name="background" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ux8g0")
volume_db = -6.251

[node name="select_ability" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_bj2fl")
volume_db = -0.567
